syntax = "proto3";
package rpc ;
import "options.proto";
option go_package = "github.com/ronaksoft/rony/example/task_manager/rpc";


// TaskManager
service TaskManager {
    option (rony_cobra_cmd) = true;
    rpc Register(RegisterRequest) returns (Authorization);
    rpc Login(LoginRequest) returns (Authorization);
    rpc Create(CreateRequest) returns (TaskView);
    rpc Get(GetRequest) returns (TaskView);
    rpc Delete(DeleteRequest) returns (Bool);
    rpc List(ListRequest) returns (TaskViewMany);
}

// RegisterRequest
message RegisterRequest {
    string Username = 1;
    string FirstName = 2;
    string LastName = 3;
    string Password = 4;
}

// LoginRequest
message LoginRequest {
    string Username = 1;
    string Password = 4;
}

// Authorization
message Authorization {
    string SessionID = 1;
}

message CreateRequest {
    string Title = 1;
    repeated string TODOs = 2;
    int64 DueDate = 3;
}

message GetRequest {
    int64 TaskID  = 1;
}

message DeleteRequest {
    int64 TaskID  = 1;
}

message ListRequest {
    int32 Offset = 1;
    int32 Limit = 2;
}

message TaskView {
    int64 ID=1;
    string Title = 2;
    repeated string TODOs = 3;
    int64 DueDate = 4;
}

message TaskViewMany {
    repeated TaskView Tasks = 1;
}

message Bool {
    bool Result = 1;
}